--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   min-height: 450px;
   margin: 0 auto;
   background-color: aquamarine;
+  box-shadow: darkcyan;
   margin-top: 50px;
   padding: 15px 50px;
 }
