--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,16 @@
 }
 .text-container{
   text-align: center;
-  color: blueviolet;
+  color: rgba(81, 3, 83, 0.767);
 }
 .expense-container{
   display: flex;
   justify-content: space-around;
   background-color: bisque;
   box-shadow: burlywood;
+}
+.transaction-form input{
+  width: 100%;
+  margin: 10 px 0;
+  padding: 5px 0;
 }
