--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,12 @@
   margin: 10 px 0;
   padding: 5px 0;
 }
+.transaction-list{
+  margin: 0;
+  padding: 0;
+}
+.transaction-list > li{
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 0 10px blueviolet;
+}
