--- a/src/App.css
+++ b/src/App.css
@@ -30,4 +30,7 @@
   display: flex;
   justify-content: space-between;
   box-shadow: 0 0 10px blueviolet;
+  padding: 10px 5px;
+  background-color: bisque;
+  margin: 5px 0;
 }
