--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@
   min-height: 450px;
   margin: 0 auto;
   background-color: aquamarine;
-  box-shadow: darkcyan;
+  box-shadow: blueviolet;
   margin-top: 50px;
   padding: 15px 50px;
 }
 .text-container{
   text-align: center;
-  color: rgba(81, 3, 83, 0.767);
+  color: darkmagenta;
 }
 .expense-container{
   display: flex;
